# CyberpunkModlistSetup

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: Catalog.cpp  Catalog.h  CleanCore.cpp  CleanCore.h  Config.cpp  Config.h  Detect.cpp  Detect.h  GameDetect.cpp  GameDetect.h  Net.cpp  Net.h  Quarantine.cpp  Quarantine.h  Run.cpp  Run.h  SystemTweaks.cpp  SystemTweaks.h  Util.h  Verify.cpp  Verify.h  app.manifest  main_gui.cpp
